examples/test/testpolicy18130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18130
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key22: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value17
          key3: value33
          key31: value6
      podSelector:
        matchLabels:
          key20: value21
          key2: value5
